[gd_scene load_steps=7 format=3 uid="uid://1f5y3e22bwso"]

[ext_resource type="Script" path="res://Scenes/Maps/Main_Menu/main_menu.gd" id="1_3c5vb"]
[ext_resource type="Texture2D" uid="uid://dwmdvdx3sh63u" path="res://Assets/Sprites/Arens/Dojo.png" id="2_7wb5n"]
[ext_resource type="Texture2D" uid="uid://crgetxsssdwc3" path="res://Assets/Sprites/UI/Ui_Button.png" id="3_0v8qh"]
[ext_resource type="Theme" uid="uid://bmyrmyg1v671u" path="res://Scenes/Ui_scenes/Theme.tres" id="3_lhrnq"]
[ext_resource type="AudioStream" uid="uid://b8rjund833gls" path="res://Assets/Music/DojoMusic.mp3" id="5_mfu7a"]

[sub_resource type="LabelSettings" id="LabelSettings_72oh8"]
font_color = Color(0, 0, 0, 1)

[node name="Main_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c5vb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7wb5n")

[node name="Settings" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_left = 410.0
offset_top = 430.0
offset_right = 540.0
offset_bottom = 480.0
texture = ExtResource("3_0v8qh")
expand_mode = 3

[node name="HSlider" type="HSlider" parent="Settings"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 112.0
offset_bottom = 28.0

[node name="Label" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 38.0
offset_top = 21.0
offset_right = 84.0
offset_bottom = 44.0
text = "Music"
label_settings = SubResource("LabelSettings_72oh8")

[node name="LevelsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="LevelsContainer"]
layout_mode = 2
texture = ExtResource("3_0v8qh")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="LevelsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="LevelsContainer/MarginContainer"]
layout_mode = 2

[node name="Level1Button" type="Button" parent="LevelsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "1
"

[node name="Level2Button" type="Button" parent="LevelsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "2
"

[node name="Level3Button" type="Button" parent="LevelsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "3
"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_top = 185.0
offset_right = 167.0
offset_bottom = 405.0
scale = Vector2(2, 2)
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "Play"

[node name="SelectLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "Select Level"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lhrnq")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mfu7a")
autoplay = true

[connection signal="pressed" from="LevelsContainer/MarginContainer/HBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="LevelsContainer/MarginContainer/HBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="LevelsContainer/MarginContainer/HBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectLevelButton" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
